@@ -17,12 +17,14 @@
 package ch.post.it.evoting.cryptoprimitives.internal.utils;
 
 import static org.junit.jupiter.api.Assertions.assertAll;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.mockStatic;
 
 import java.math.BigInteger;
+import java.util.List;
 import java.util.function.Supplier;
 import java.util.stream.Stream;
 
@@ -38,8 +40,6 @@ import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.MockedStatic;
 
-import ch.post.it.evoting.cryptoprimitives.collection.ImmutableByteArray;
-import ch.post.it.evoting.cryptoprimitives.collection.ImmutableList;
 import ch.post.it.evoting.cryptoprimitives.internal.math.TestRandomService;
 import ch.post.it.evoting.cryptoprimitives.internal.securitylevel.SecurityLevelConfig;
 import ch.post.it.evoting.cryptoprimitives.internal.securitylevel.SecurityLevelInternal;
@@ -52,9 +52,9 @@ class KDFServiceTest {
 
 	private static final int DEFAULT_HASH_LENGTH_BYTES = 32;
 	private static final TestRandomService randomService = new TestRandomService();
-	private static final ImmutableList<String> emptyInfo = ImmutableList.emptyList();
+	private static final List<String> emptyInfo = List.of();
 	private KDFService kdfService;
-	private ImmutableByteArray PRK;
+	private byte[] PRK;
 	private int requiredLength;
 	private BigInteger requestedUpperBound;
 
@@ -76,7 +76,7 @@ class KDFServiceTest {
 
 	@Test
 	void testNoInfoDoesntThrow() {
-		assertDoesNotThrow(() -> kdfService.KDF(PRK, emptyInfo, requiredLength));
+		assertDoesNotThrow(() -> kdfService.KDF(PRK, List.of(), requiredLength));
 	}
 
 	@Test
@@ -86,7 +86,7 @@ class KDFServiceTest {
 
 	@Test
 	void testPRKLengthSmallerThanHashLengthThrows() {
-		final ImmutableByteArray tooSmallPRK = new ImmutableByteArray(new byte[DEFAULT_HASH_LENGTH_BYTES - 1]);
+		final byte[] tooSmallPRK = new byte[DEFAULT_HASH_LENGTH_BYTES - 1];
 		assertThrows(IllegalArgumentException.class, () -> kdfService.KDF(tooSmallPRK, emptyInfo, requiredLength));
 	}
 
@@ -96,7 +96,7 @@ class KDFServiceTest {
 	}
 
 	static Stream<Arguments> KDFRealValuesProvider() {
-		final ImmutableList<TestParameters> parametersList = TestParameters.fromResource("/utils/hkdf-expand.json");
+		final List<TestParameters> parametersList = TestParameters.fromResource("/utils/hkdf-expand.json");
 
 		return parametersList.stream().parallel().map(testParameters -> {
 			// Context.
@@ -106,13 +106,13 @@ class KDFServiceTest {
 
 			// Inputs.
 			final JsonData input = testParameters.getInput();
-			final ImmutableByteArray PRK = input.get("prk", ImmutableByteArray.class);
-			final ImmutableList<String> infos = ImmutableList.of(input.get("info", String[].class));
+			final byte[] PRK = input.get("prk", byte[].class);
+			final List<String> infos = List.of(input.get("info", String[].class));
 			final Integer requiredByteLength = input.get("length", Integer.class);
 
 			// Output.
 			final JsonData output = testParameters.getOutput();
-			final ImmutableByteArray OKM = output.get("okm", ImmutableByteArray.class);
+			final byte[] OKM = output.get("okm", byte[].class);
 
 			return Arguments.of(hashSupplier, PRK, infos, requiredByteLength, OKM, testParameters.getDescription());
 		});
@@ -121,11 +121,11 @@ class KDFServiceTest {
 	@ParameterizedTest(name = "{5}")
 	@MethodSource("KDFRealValuesProvider")
 	@DisplayName("KeyDerivation returns expected output")
-	void testKDFWithRealValues(final Supplier<Digest> hashSupplier, final ImmutableByteArray PRK, final ImmutableList<String> infos,
-			final int requiredByteLength, final ImmutableByteArray OKM, final String description) {
+	void testKDFWithRealValues(final Supplier<Digest> hashSupplier, final byte[] PRK, final List<String> infos, final int requiredByteLength,
+			final byte[] OKM, final String description) {
 		final KDFService kdfService = new KDFService(hashSupplier);
-		final ImmutableByteArray actualResult = kdfService.KDF(PRK, infos, requiredByteLength);
-		assertEquals(OKM, actualResult, String.format("assertion failed for: %s", description));
+		final byte[] actualResult = kdfService.KDF(PRK, infos, requiredByteLength);
+		assertArrayEquals(OKM, actualResult, String.format("assertion failed for: %s", description));
 	}
 
 	@Test
@@ -139,7 +139,7 @@ class KDFServiceTest {
 
 	@Test
 	void testKDFToZqNoInfoDoesntThrow() {
-		assertDoesNotThrow(() -> kdfService.KDFToZq(PRK, ImmutableList.emptyList(), requestedUpperBound));
+		assertDoesNotThrow(() -> kdfService.KDFToZq(PRK, List.of(), requestedUpperBound));
 	}
 
 	@Test
@@ -150,12 +150,12 @@ class KDFServiceTest {
 
 	@Test
 	void testKDFToZqPRKLengthSmallerThanHashLengthThrows() {
-		final ImmutableByteArray tooSmallPRK = new ImmutableByteArray(new byte[DEFAULT_HASH_LENGTH_BYTES - 1]);
+		final byte[] tooSmallPRK = new byte[DEFAULT_HASH_LENGTH_BYTES - 1];
 		assertThrows(IllegalArgumentException.class, () -> kdfService.KDFToZq(tooSmallPRK, emptyInfo, requestedUpperBound));
 	}
 
 	static Stream<Arguments> KDFToZqRealValuesProvider() {
-		final ImmutableList<TestParameters> parametersList = TestParameters.fromResource("/utils/hkdf-expand-to-zq.json");
+		final List<TestParameters> parametersList = TestParameters.fromResource("/utils/hkdf-expand-to-zq.json");
 
 		return parametersList.stream().map(testParameters -> {
 			// Context.
@@ -165,8 +165,8 @@ class KDFServiceTest {
 
 			// Inputs.
 			final JsonData input = testParameters.getInput();
-			final ImmutableByteArray PRK = input.get("prk", ImmutableByteArray.class);
-			final ImmutableList<String> infos = ImmutableList.of(input.get("info", String[].class));
+			final byte[] PRK = input.get("prk", byte[].class);
+			final List<String> infos = List.of(input.get("info", String[].class));
 			final BigInteger q = input.get("q", BigInteger.class);
 
 			// Output.
@@ -180,8 +180,7 @@ class KDFServiceTest {
 	@ParameterizedTest(name = "{5}")
 	@MethodSource("KDFToZqRealValuesProvider")
 	@DisplayName("KDFToZq returns expected output")
-	void testKDFToZqWithRealValues(final Supplier<Digest> hashSupplier, final ImmutableByteArray PRK, final ImmutableList<String> infos,
-			final BigInteger q,
+	void testKDFToZqWithRealValues(final Supplier<Digest> hashSupplier, final byte[] PRK, final List<String> infos, final BigInteger q,
 			final ZqElement u, final String description, final SecurityLevelInternal securityLevel) {
 		try (final MockedStatic<SecurityLevelConfig> mockedSecurityLevel = mockStatic(SecurityLevelConfig.class)) {
 			mockedSecurityLevel.when(SecurityLevelConfig::getSystemSecurityLevel).thenReturn(securityLevel);
